syntax = "proto3";

option java_package = "com.nahid.grpc";
option java_multiple_files = true;

service user{

  rpc registration(RegistrationRequest) returns (APIResponse);
  rpc login(LoginRequest) returns (APIResponse);
  rpc logout(Empty) returns (APIResponse);

}
message RegistrationRequest{
  string fullName = 1;
  string userName = 2;
  string phoneNumber=3;
  string email = 4;
  string password = 5;
}
message LoginRequest{
  string username = 1;
  string password = 2;

}
message APIResponse{

  string responseMessage = 1;
  int32 responseCode = 2;

}
message Empty{

}